add shuffle answers

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /DerivedData
 Guess Who.xcodeproj/project.xcworkspace/xcuserdata/dima.xcuserdatad/UserInterfaceState.xcuserstate
+
+Guess Who.xcodeproj/xcuserdata/dima.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
