nilling usedQuestionsID if everything is used already

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Guess Who.xcodeproj/project.xcworkspace/xcuserdata/dima.xcuserdatad/UserInterfac
 
 
 Guess Who.xcodeproj/xcuserdata/dima.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+Guess Who.xcodeproj/project.xcworkspace/xcuserdata/dima.xcuserdatad/UserInterfaceState (Dimas-MacBook-Pro's conflicted copy 2013-05-22).xcuserstate
