--- a/Guess Who/database.plist
+++ b/Guess Who/database.plist
@@ -105,7 +105,7 @@
 			<key>variants</key>
 			<array>
 				<string>Hugh Jackman</string>
-				<string>Chrisitan Bale</string>
+				<string>Christian Bale</string>
 				<string>Jason Statham</string>
 				<string>Chris Pine</string>
 			</array>
@@ -114,7 +114,7 @@
 			<key>question</key>
 			<string>Who invented electricity?</string>
 			<key>answer</key>
-			<string>Tomas Edison</string>
+			<string>Thomas Edison</string>
 			<key>variants</key>
 			<array>
 				<string>Thomas Edison</string>
