add MainMenu button in SummaryVC

--- a/Guess Who/database.plist
+++ b/Guess Who/database.plist
@@ -606,7 +606,7 @@
 		</dict>
 		<dict>
 			<key>question</key>
-			<string>Scientific ter of fear of going to school?</string>
+			<string>Scientific termin of fear of going to school?</string>
 			<key>answer</key>
 			<string>Didaskaleinophobia</string>
 			<key>variants</key>
