--- a/Guess Who/theQuiz-Info.plist
+++ b/Guess Who/theQuiz-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>Cheverda-Inc..${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>Cheverda-Studio.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
