--- a/Guess Who/Quizium-Info.plist
+++ b/Guess Who/Quizium-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>Cheverda-Studio.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.dmytro-cheverda.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
