--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Guess Who.xcodeproj/xcuserdata/dima.xcuserdatad/xcdebugger/Breakpoints.xcbkptlis
 Guess Who.xcodeproj/project.xcworkspace/xcuserdata/dima.xcuserdatad/UserInterfaceState (Dimas-MacBook-Pro's conflicted copy 2013-05-22).xcuserstate
 
 theQuiz.xcodeproj/project.xcworkspace/xcuserdata/dima.xcuserdatad/UserInterfaceState.xcuserstate
+
+Quizium.xcodeproj/project.xcworkspace/xcuserdata/dima.xcuserdatad/UserInterfaceState.xcuserstate
